--- a/personal.htm
+++ b/personal.htm
@@ -37,21 +37,26 @@ h3
 <p style="line-height: 150%" align="justify">
 <span lang="EN-US" style="font-family: Times New Roman; font-weight: normal">
 <font size="4">
-&nbsp;&nbsp;&nbsp; Guoying Zhao is currently a full p</font></span><span style="font-family: Times New Roman; font-weight: normal"><font size="4">rofessor 
-(tenured, from 2017) 
-with the Center for Machine Vision and Signal Analysis, University of Oulu, 
-Finland, where she was a senior researcher (2005-2007), Academy postdoctoral 
+&nbsp;&nbsp;&nbsp; Guoying Zhao is currently an Academy Professor with Academy 
+Finland and </font></span>
+<span style="font-family: Times New Roman; font-weight: normal"><font size="4">with the Center for Machine Vision and Signal Analysis 
+(CMVS), University of Oulu, 
+Finland. She has been a full </font></span>
+<span lang="EN-US" style="font-family: Times New Roman; font-weight: normal">
+<font size="4">
+p</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">rofessor 
+(tenured, from 2017) with CMVS, where she was a senior researcher (2005-2007), Academy postdoctoral 
 researcher (2008-2011), Academy research fellow (2011-2017) and Associate 
 Professor (tenure track, 2014-2017). She received the Ph.D. degree in computer science from the 
 Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp; <span lang="en-us">
-She got the Academy Postdoctoral position in 2007, </span>was 
-selected in 2011 to the highly competitive Academy Research Fellow position, and in 
-2020, she was selected to one of the ten Academy Professors. She has 
-authored or co-authored more than <span lang="en-us">26</span>0 papers in journals and conferences, and 
-has served </font></span><font size="4">
+She got the Academy Postdoctoral position in 2007, </span>was selected in 2011 
+to the highly competitive Academy Research Fellow position, and in 2020, she was 
+selected to Prestigious Academy Professor position. She has 
+authored or co-authored more than <span lang="en-us">27</span>0 papers in journals and conferences, and 
+has served </span> </font><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 1<span lang="en-us">62</span>00 citations in Google Scholar (h-index 
-5<span lang="en-us">9</span>). She is Co-Program chair of ACM International Conference on Multimodal 
+currently over 1<span lang="en-us">70</span>00 citations in Google Scholar 
+(h-index 62). She was Co-Program chair of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), and Special 
 Sessions/Panels Chairs for FG 2023. She was general chair for ICBEA (2019, 2020), Co-Chair for Late Breaking 
 Results of ICMI 2019, co-publicity c</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">hair 
