--- a/teammembers.htm
+++ b/teammembers.htm
@@ -22,115 +22,161 @@ p
 <p class="title" style="margin-bottom: 0.5cm; text-align:center">
 <b><font size="5">TEAM MEMBERS</font></b></p>
 <p class="title" style="margin-bottom: 0.5cm"><font size="4"><b>Current members:</b></font></p>
-<table border="0" width="89%">
+<table border="0" width="56%">
 	<tr>
-		<td width="272" height="0" align="center" valign="top">
-		<font size="4" face="Times New Roman"><b>Senior researchers:</b></font></td>
-		<td width="288" height="0" align="center" valign="top">
-		<font face="Times New Roman" size="4"><b>Ph. D. <span lang="en-us">
-		candidates</span>:</b></font></td>
-		<td height="0" align="center" valign="top" width="259">
-		<font face="Times New Roman" size="4"><b>Master students<span lang="en-us"> 
-		and research assistants</span>:</b></font></td>
-		<td height="0" align="center" valign="top" width="453">
-		<font face="Times New Roman" size="4"><b>Visiting researchers</b></font></td>
+		<td width="894" height="0" align="center" valign="top" colspan="4">
+		<p align="left">
+		<font size="4" face="Times New Roman"><b><u>Senior researchers<span lang="en-us"> 
+		and postdoctoral research fellows</span></u>:</b></font></td>
 	</tr>
 	<tr>
-		<td width="272" height="0" align="left" valign="top">
-		<ul>
-			<li>
-			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
-			Kevin CHENG</span></p></li>
-			<li>
-			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. H</span>anlin 
-			MO</p></li>
-			<li>
-			<p class="title" style="line-height: 200%">Dr.Mohammad SABOKROU</p></li>
-			<li>
-			<p class="title" style="line-height: 200%"><span lang="en-us">Dr. 
-			Qianru XU</span></p></li>
-		</ul>
-		</td>
-		<td width="288" height="0" align="left" valign="top">
-		<ul>
-			<li>
-			<p class="title" style="line-height: 200%">
-			<span lang="en-us">Mr. Muzammil BEHZAD</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			Mr. Haoyu <span lang="en-us">CHEN</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			Ms. Yante <span lang="en-us">LI</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			Mr. Abdelrahman <span lang="en-us">MOSTAFA</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			<span lang="en-us">Mr. Wei PENG</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			<span lang="en-us">Mr. Marko SAVIC</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			Mr. Atif SHAH</p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			Mr. Henglin <span lang="en-us">SHI</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			Mr. Khanh T<span lang="en-us">RAN</span>-T<span lang="en-us">HUONG</span></p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			<span lang="en-us">Mr. </span>Tuomas 
-			VARANKA</p>
-			</li>
-			<li>
-			<p class="title" style="line-height: 200%">
-			<span lang="en-us">Mr. Zitong YU</span></p>
-			</li>
-		</ul>
-		</td>
-		<td height="0" align="left" valign="top" width="259">
-		<ul>
-			<li>
-			<p class="title" style="line-height: 200%">Mr. Yar Zoe MYINT</p>
-			</li>
-		</ul>
-		</td>
-		<td height="0" align="left" valign="top" width="453">
-		<ul>
-			<li>
-			<p class="title" style="line-height: 200%">Dr. 
-			Yuhua FAN (Liaocheng University): Oct. 2019 - Oct. 2021</li>
-			<li>
-			<p class="title" style="line-height: 200%"><span lang="en-us">Assoc. 
+		<td width="222" height="0" align="center" valign="top">
+		<p align="left" style="text-align: center">
+		<img border="0" src="images/Kevin.jpg"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img src="https://pbs.twimg.com/profile_images/1228670376277938176/jExRr6b-_400x400.jpg" alt="pbs.twimg.com/profile_images/122867037627793817..." jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 144px; height: 142px; margin: 0px"></td>
+		<td height="0" align="center" valign="top" width="209">
+		<img border="0" src="Hanlin.jpg"></td>
+		<td height="0" align="center" valign="top" width="223">
+		<img alt="Qianru Xu" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=CmqFhEwAAAAJ&citpid=4" id="gsc_prf_pup-img" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=CmqFhEwAAAAJ&amp;citpid=4 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=CmqFhEwAAAAJ&amp;citpid=4 256w" width="143" height="140"></td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<font face="Times New Roman"><b>Dr. 
+			Kevin CHENG</b></font></td>
+		<td width="226" height="0" align="center" valign="top">
+		<font face="Times New Roman"><b>Dr. Mohammad SABOKROU</b></font></td>
+		<td height="0" align="center" valign="top" width="209">
+		<font face="Times New Roman"><b>Dr. Hanlin 
+			MO</b></font></td>
+		<td height="0" align="center" valign="top" width="223">
+		<font face="Times New Roman"><b>Dr. 
+			Qianru XU</b></font></td>
+	</tr>
+	<tr>
+		<td width="880" height="0" align="center" valign="top" colspan="4">
+		　</td>
+	</tr>
+	<tr>
+		<td width="880" height="0" align="center" valign="top" colspan="4">
+		　</td>
+	</tr>
+	<tr>
+		<td width="880" height="0" align="center" valign="top" colspan="4">
+		<p align="left">
+		<font face="Times New Roman" size="4"><b><u>Ph. D. <span lang="en-us">
+		candidates</span></u>:</b></font></td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<img border="0" src="Muzammil.jpg"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Haoyu.jpg"></td>
+		<td height="0" align="center" valign="top" width="209">
+		<img border="0" src="Yante.jpg"></td>
+		<td height="0" align="center" valign="top" width="223">
+		<img border="0" src="Abdu.jpg" width="131" height="147"></td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<font size="2" face="Times New Roman"><b>Mr. Muzammil BEHZAD</b></font></td>
+		<td width="226" height="0" align="center" valign="top">
+		<font size="2" face="Times New Roman"><b>Mr. Haoyu CHEN</b></font></td>
+		<td height="0" align="center" valign="top" width="209">
+		<font size="2" face="Times New Roman"><b>Ms. Yante LI</b></font></td>
+		<td height="0" align="center" valign="top" width="223">
+		<font size="2" face="Times New Roman"><b>Mr. Abdelrahman MOSTAFA</b></font></td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<img border="0" src="Wei.jpg"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Marko.jpg"></td>
+		<td height="0" align="center" valign="top" width="209">
+		<img border="0" src="Atif.jpg"></td>
+		<td height="0" align="center" valign="top" width="223">
+		<img border="0" src="Henglin.jpg" width="134" height="145"></td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<font size="2" face="Times New Roman"><b>Mr. Wei PENG</b></font></td>
+		<td width="226" height="0" align="center" valign="top">
+		<font size="2" face="Times New Roman"><b>Mr. Marko SAVIC</b></font></td>
+		<td height="0" align="center" valign="top" width="209">
+		<font size="2" face="Times New Roman"><b>Mr. Atif SHAH</b></font></td>
+		<td height="0" align="center" valign="top" width="223">
+		<font size="2" face="Times New Roman"><b>Mr. Henglin SHI</b></font></td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<img src="https://www.oulu.fi/sites/default/files/styles/w460/public/khanh2.JPG?itok=aLQwcGoL" alt="Thuong-Khanh Tran | University of Oulu" jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 148px; height: 141px; margin: 0px"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Tuomas.jpg"></td>
+		<td height="0" align="center" valign="top" width="209">
+		<img border="0" src="Zitong.jpg"></td>
+		<td height="0" align="center" valign="top" width="223">
+		　</td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<font size="2" face="Times New Roman"><b>Mr. Khanh TRAN-THUONG</b></font></td>
+		<td width="226" height="0" align="center" valign="top">
+		<font size="2" face="Times New Roman"><b>Mr. Tuomas 
+			VARANKA</b></font></td>
+		<td height="0" align="center" valign="top" width="209">
+		<font size="2" face="Times New Roman"><b>Mr. Zitong YU</b></font></td>
+		<td height="0" align="center" valign="top" width="223">
+		　</td>
+	</tr>
+	<tr>
+		<td width="880" height="0" align="center" valign="top" colspan="4">
+		　</td>
+	</tr>
+	<tr>
+		<td width="880" height="0" align="center" valign="top" colspan="4">
+		　</td>
+	</tr>
+	<tr>
+		<td width="880" height="0" align="center" valign="top" colspan="4">
+		<p align="left">
+		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<img border="0" src="Yuhua.jpg"></td>
+		<td width="226" height="0" align="center" valign="top">
+		　</td>
+		<td height="0" align="center" valign="top" width="209">
+		　</td>
+		<td height="0" align="center" valign="top" width="223">
+		　</td>
+	</tr>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		<font face="Times New Roman"><b>Dr. Yuhua FAN </b>(Liaocheng University)<span lang="en-us">:
+		</span>Oct. 2019 - Oct. 2022</font></td>
+		<td width="226" height="0" align="center" valign="top">
+		<font face="Times New Roman"><b>Assoc. 
 			Prof. 
-			</span>Xu C<span lang="en-us">HENG</span> (Nanjing University of Information Science and 
-			Technology, China): July 20<span lang="en-us">21</span> - 
-			<span lang="en-us">July</span>. 20<span lang="en-us">22</span></li>
-			<li>
-			<p class="title" style="line-height: 200%">Ms. Yanying LIANG (South 
-			China University of Technology): Oct. 2019 - Oct. 2021</li>
-			<li>
-			<p class="title" style="line-height: 200%"><span lang="en-us">Mr. 
-			Yang LIU </span>(South China University of Technology): Oct. 20<span lang="en-us">20</span> 
-			- Oct. 2021</li>
-			<li>
-			<p class="title" style="line-height: 200%">Mr. Jinsheng WEI <span lang="en-us">
-			(Southeast University, Nanjing, China): Nov. 2020 - Nov. 2021</span></li>
-		</ul></td>
+			Xu CHENG </b>(Nanjing University of Information Science and 
+			Technology): July 2021 - 
+			July. 2022</font></td>
+		<td height="0" align="center" valign="top" width="209">
+		　</td>
+		<td height="0" align="center" valign="top" width="223">
+		　</td>
 	</tr>
-</table>
+	<tr>
+		<td width="222" height="0" align="center" valign="top">
+		　</td>
+		<td width="226" height="0" align="center" valign="top">
+		　</td>
+		<td height="0" align="center" valign="top" width="209">
+		　</td>
+		<td height="0" align="center" valign="top" width="223">
+		　</td>
+	</tr>
+	</table>
 <p class="title" style="line-height: 150%; margin-top:1cm">
 <font size="4"><b>Past members:</b></font></p>
 <ul>
@@ -198,78 +244,85 @@ p
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <ul>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="en-us">Assoc</span>.<span lang="en-us"> 
-			Prof.</span> Bo 
+	<li>
+	<p class="title" style="line-height: 150%">Ms. Yanying LIANG (South China 
+	University of Technology): Nov<span lang="en-us">.</span> 2019 - Nov<span lang="en-us">.</span> 
+	2021</li>
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Yang LIU (South China 
+	University of Technology): Oct. 2020 - Oct. 2021</li>
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Jinsheng WEI (Southeast 
+	University, Nanjing, China): Nov. 2020 - Nov. 2021</li>
+	<li>
+	<p class="title" style="line-height: 150%">Assoc. 
+			Prof. Bo 
 			LI (South China University of Technology, 
 			Guangzhou, China): Aug. 2019 - Aug. 2020</li>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="en-us">Assis</span>.<span lang="en-us"> 
+	<li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assis</span>.<span lang="en-us"> 
 			Prof.</span> Xin
 			<span lang="en-us">Shu</span> (Nanjing Agricultural University, 
 			China): Aug. 2019 - Mar. 2020</li>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="en-us">Mr. 
+	<li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. 
 			Zhaofeng Li </span>(University of Chinese Academy of Sciences; 
 			Changchun Institute of Optics, Fine Mechanics and Physics,<span lang="en-us">
-			</span>Chinese Academy of Sciences): Oct. 2018 - Jun. 20<span lang="en-us">20</span></li>
-			<li>
-			<p class="title" style="line-height: 150%">Mr. Berkay Elag<span lang="fi">&ouml;z</span> (Izmir 
+	</span>Chinese Academy of Sciences): Oct. 2018 - Jun. 20<span lang="en-us">20</span></li>
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Berkay Elag<span lang="fi">&ouml;z</span> (Izmir 
 			Katip Celebi University, Turkey): Jan. 2020 - Jun. 2020</li>
-			<li>
-			<p class="title" style="line-height: 150%">Mr. Yunrui Zhao (Beihang 
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Yunrui Zhao (Beihang 
 			University): Jan. 2020 - Mar. 2020</li>
-			<li>
-			<p class="title" style="line-height: 150%">Mr. Gun Ahn (Seoul 
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Gun Ahn (Seoul 
 			National university, Seoul): Sep. 2019 - Feb. 2020</li>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
+	<li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
 			Prof. </span>Zhaoqiang Xia <span lang="en-us">(Northwestern 
 			Polytechnic University, Xi'an)</span>: Oct. 2019 - Jan. 2020</li>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="en-us">Mr. 
+	<li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. 
 			Xuesong Niu (Institute of Computing Technology, Chinese Academy of 
 			Sciences): Oct. 2019 - Jan. 2020</span></li>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
+	<li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
 			Prof. 
 			</span>Xu Cheng (Nanjing University of Information Science and 
 			Technology, China): July 2019 - Sep. 2019</li>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
+	<li>
+	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
 			Prof. 
 			Beiji</span>ng Chen (Nanjing University of Information Science and 
 			Technology, China): July 2019 - Aug. 2019</li>
-			<li>
-			<p class="title" style="line-height: 150%"><span lang="EN-US">Mr. 
+	<li>
+	<p class="title" style="line-height: 150%"><span lang="EN-US">Mr. 
 			Fan Dai (Northwestern Polytechnical University, China): Nov. 2018 - 
 			May 2019</span></li>
-			<li>
-			<p class="title" style="line-height: 150%">Mr. Guifeng Li 
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Guifeng Li 
 			(Northwest University): Mar. - Nov. 2018</li>
-			<li>
-			<p class="title" style="line-height: 150%">Mr. Ngoc-Huynh Ho (Chonnam 
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Ngoc-Huynh Ho (Chonnam 
 			National University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 
 			2019</li>
-			<li>
-			<p class="title" style="line-height: 150%">Mr. Nhu-Tai Do (Chonnam 
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Nhu-Tai Do (Chonnam 
 			National University, South Korea; PhD candidate): Jan. 6 - Jan. 20, 
 			2019</li>
-			<li>
-			<p class="title" style="line-height: 150%">Mr. Yundi Guo (Central 
+	<li>
+	<p class="title" style="line-height: 150%">Mr. Yundi Guo (Central 
 			South University, Changsha, China): Jul. - Dec. 2018</li>
-		<li>
+	<li>
 	<p class="title" style="line-height: 150%">Ms. Yuxi Xia (Jiangxi 
-			University of Finance and Economics): Jan. 2018 - Jun. 2018</p>
-	</li>
+			University of Finance and Economics): Jan. 2018 - Jun. 2018</p></li>
 	<li>
 	<p class="title" style="line-height: 150%">Ms. Na Liu (Tianjin 
-			University of Technology): Mar. 2017 - Feb. 2018</p>
-	</li>
+			University of Technology): Mar. 2017 - Feb. 2018</p></li>
 	<li>
 	<p class="title" style="line-height: 150%">Ms. Wen Yang (Beijing 
-	University of Posts and Telecommunications): Sep. 2017 - Dec. 2017</p>
-	</li>
+	University of Posts and Telecommunications): Sep. 2017 - Dec. 2017</p></li>
 	<li>
 	<p class="title" style="line-height: 150%"><span lang="en-us">Mr. Yuan 
 	Zong 
@@ -281,20 +334,22 @@ p
 	</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Jim Gribble (UC-Santa 
-	Barbara, USA): Aug. - Sep. 2017</p>
-	</li>
+	Barbara, USA): Aug. - Sep. 2017</p></li>
 	<li>
 	<p class="title" style="line-height: 150%"><span lang="en-us">Assoc. 
-	Prof. Yanliang Zhang (Henan Polytechnic University): Nov. 2016 - Nov. 2017</span></p></li>
+	Prof. Yanliang Zhang (Henan Polytechnic University): Nov. 2016 - Nov. 2017</span></p>
+	</li>
 	<li>
 	<p class="title" style="line-height: 150%">Assoc. Prof. Yongmao Wang 
 	(from Henan Polytechnic University): Oct. 2015 - Oct. 2016</p></li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Wei Ke (University of 
-	Chinese Academy of Sciences, Beijing, China): Oct. 2015 to Sep. 2016</p></li>
+	Chinese Academy of Sciences, Beijing, China): Oct. 2015 to Sep. 2016</p>
+	</li>
 	<li>
 	<p class="title" style="line-height: 150%">Ms. Qing 
-	Liu (Central South University, Changsha, China): Oct. 2015 - Apr. 2017</p></li>
+	Liu (Central South University, Changsha, China): Oct. 2015 - Apr. 2017</p>
+	</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Athanasios Papaioannou 
 	(Imperial College London, UK): May - Jun. 2016</li>
@@ -303,8 +358,7 @@ p
 	Forestry University): Sep. 2013 - Sep. 2014</li>
 	<li>
 	<p class="title" style="line-height: 150%">Mr. Yan Zhai (Beijing Forestry 
-	University): Sep. 2012 - Aug. 2013</p>
-	</li>
+	University): Sep. 2012 - Aug. 2013</p></li>
 </ul>
 
 </body>
