--- a/main_experience.htm
+++ b/main_experience.htm
@@ -35,7 +35,13 @@ EXPERIENCE</font></span></b></p>
 Position:</font></b></p>
 <ul>
 	<li>
-	<p style="text-align: left; margin-bottom:0cm; line-height:150%"><font size="4">2017.12 -, Full 
+	<p style="text-align: left; margin-bottom:0cm; line-height:150%">
+	<font size="4">2021.09-, Academy Professor, Academy of Finland and 
+	University of Oulu.</font></p>
+	</li>
+	<li>
+	<p style="text-align: left; margin-bottom:0cm; line-height:150%">
+	<font size="4">2017.12 -, Full 
 	Professor (Tenured) in Computer Science and Engineering, University of Oulu.</font></p>
 	</li>
 	<li>
@@ -82,8 +88,9 @@ Institute of Computing Technology, Chinese Academy of Sciences.</font></p>
 time): CAD Center, North China University of Technology.</font></p>
 	</li>
 </ul>
-<p style="text-align: left; margin-bottom:0.5cm; line-height:150%"><span style="font-size: 14pt">
-<b>Projects as PI or Co-PI:</b></span></p>
+<p style="text-align: left; margin-bottom:0.5cm; line-height:150%">
+<b><span style="font-size: 14pt">
+Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span></b></p>
 <ul>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
@@ -91,6 +98,17 @@ time): CAD Center, North China University of Technology.</font></p>
 	Professor</b> Grant (highest academic position of Academy of Finland): <b>
 	Towards vision-based emotion AI (EmotionAI)</b>.&nbsp; 798 750 &#8364;. </span></font><span lang="EN-US"><font size="4">Overall success rate: 
 	4%.</font></span></li>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2022.01-2024.12: <b>Academy ICT 
+	2023 project</b>: ¡°<b>Trustable faces: Face data integrity against digital 
+	and physical attacks (TrustFace)</b>¡±. 653 792 &#8364;. (Co-PI: Assis. Prof. 
+	Xiaobai Li)</span></font></li>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-bottom: 0cm; line-height:150%; text-autospace:ideograph-numeric ideograph-other">
+	<font size="4"><span style="color: black">
+	2022.01-2025.12: <b>INFOTECH project</b>: <b>Towards Secure and 
+	Reliable Deep Learning Systems against Adversarial Attacks</b>. 336 000 &#8364;</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2021.01.01-2022.12.31: <b>AI Forum</b>: 
