--- a/teammembers.htm
+++ b/teammembers.htm
@@ -34,11 +34,11 @@ p
 		<p align="left" style="text-align: center">
 		<img border="0" src="images/Kevin.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img src="https://pbs.twimg.com/profile_images/1228670376277938176/jExRr6b-_400x400.jpg" alt="pbs.twimg.com/profile_images/122867037627793817..." jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 144px; height: 142px; margin: 0px"></td>
+		<img border="0" src="images/Mohammad.jpg" width="142" height="146"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Hanlin.jpg"></td>
+		<img border="0" src="images/Hanlin.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img alt="Qianru Xu" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=CmqFhEwAAAAJ&citpid=4" id="gsc_prf_pup-img" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=CmqFhEwAAAAJ&amp;citpid=4 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=CmqFhEwAAAAJ&amp;citpid=4 256w" width="143" height="140"></td>
+		<img border="0" src="images/Qianru.jpg" width="153" height="150"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -69,13 +69,13 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Muzammil.jpg"></td>
+		<img border="0" src="images/Muzammil.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Haoyu.jpg"></td>
+		<img border="0" src="images/Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Yante.jpg"></td>
+		<img border="0" src="images/Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img border="0" src="Abdu.jpg" width="131" height="147"></td>
+		<img border="0" src="images/Abdu.jpg" width="131" height="147"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -89,13 +89,13 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Wei.jpg"></td>
+		<img border="0" src="images/Wei.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Marko.jpg"></td>
+		<img border="0" src="images/Marko.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Atif.jpg"></td>
+		<img border="0" src="images/Atif.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img border="0" src="Henglin.jpg" width="134" height="145"></td>
+		<img border="0" src="images/Henglin.jpg" width="134" height="145"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -109,11 +109,11 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img src="https://www.oulu.fi/sites/default/files/styles/w460/public/khanh2.JPG?itok=aLQwcGoL" alt="Thuong-Khanh Tran | University of Oulu" jsname="HiaYvf" jsaction="load:XAeZkd;" class="n3VNCb" data-noaft="1" style="width: 148px; height: 141px; margin: 0px"></td>
+		<img border="0" src="images/Khanh.jpg" width="154" height="143"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Tuomas.jpg"></td>
+		<img border="0" src="images/Tuomas.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Zitong.jpg"></td>
+		<img border="0" src="images/Zitong.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
 		¡¡</td>
 	</tr>
@@ -143,7 +143,7 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="Yuhua.jpg"></td>
+		<img border="0" src="images/Yuhua.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
 		¡¡</td>
 		<td height="0" align="center" valign="top" width="209">
