--- a/teammembers.htm
+++ b/teammembers.htm
@@ -32,7 +32,7 @@ p
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p align="left" style="text-align: center">
-		<img border="0" src="images/Kevin.jpg"></td>
+		<img border="0" src="/images/Kevin.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="images/Mohammad.jpg" width="142" height="146"></td>
 		<td height="0" align="center" valign="top" width="209">
