--- a/main_experience.htm
+++ b/main_experience.htm
@@ -101,8 +101,8 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2022.01-2024.12: <b>Academy ICT 
-	2023 project</b>: ¡°<b>Trustable faces: Face data integrity against digital 
-	and physical attacks (TrustFace)</b>¡±. 653 792 &#8364;. (Co-PI: Assis. Prof. 
+	2023 project</b>: <b>Trustable faces: Face data integrity against digital 
+	and physical attacks (TrustFace)</b>. 653 792 &#8364;. (Co-PI: Assis. Prof. 
 	Xiaobai Li)</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-bottom: 0cm; line-height:150%; text-autospace:ideograph-numeric ideograph-other">
