--- a/teammembers.htm
+++ b/teammembers.htm
@@ -32,13 +32,13 @@ p
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p align="left" style="text-align: center">
-		<img border="0" src="Kevin.jpg"></td>
+		<img border="0" src="../Kevin.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="images/Mohammad.jpg" width="142" height="146"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Mohammad.jpg" width="142" height="146"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="images/Hanlin.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Hanlin.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img border="0" src="images/Qianru.jpg" width="153" height="150"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Qianru.jpg" width="153" height="150"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -69,13 +69,13 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="images/Muzammil.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Muzammil.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="images/Haoyu.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="images/Yante.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img border="0" src="images/Abdu.jpg" width="131" height="147"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Abdu.jpg" width="131" height="147"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -89,13 +89,13 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="images/Wei.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Wei.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="images/Marko.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Marko.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="images/Atif.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Atif.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img border="0" src="images/Henglin.jpg" width="134" height="145"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Henglin.jpg" width="134" height="145"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -109,11 +109,11 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="images/Khanh.jpg" width="154" height="143"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Khanh.jpg" width="154" height="143"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="images/Tuomas.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Tuomas.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="images/Zitong.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Zitong.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
 		¡¡</td>
 	</tr>
@@ -143,9 +143,9 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<img border="0" src="images/Yuhua.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Yuhua.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		¡¡</td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Xu.jpg" width="101" height="145"></td>
 		<td height="0" align="center" valign="top" width="209">
 		¡¡</td>
 		<td height="0" align="center" valign="top" width="223">
