--- a/teammembers.htm
+++ b/teammembers.htm
@@ -25,20 +25,20 @@ p
 <table border="0" width="56%">
 	<tr>
 		<td width="894" height="0" align="center" valign="top" colspan="4">
-		<p align="left">
+		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font size="4" face="Times New Roman"><b><u>Senior researchers<span lang="en-us"> 
 		and postdoctoral research fellows</span></u>:</b></font></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p align="left" style="text-align: center">
-		<img border="0" src="../Kevin.jpg"></td>
+		<img border="0" src="https://gyzhao-nm.github.io/Guoying/raw/images/Kevin.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Mohammad.jpg" width="142" height="146"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/raw/images/Mohammad.jpg" width="142" height="146"></td>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Hanlin.jpg"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/raw/images/Hanlin.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
-		<img border="0" src="https://github.com/gyzhao-nm/Guoying/blob/main/images/Qianru.jpg" width="153" height="150"></td>
+		<img border="0" src="https://github.com/gyzhao-nm/Guoying/raw/images/Qianru.jpg" width="153" height="150"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -55,15 +55,7 @@ p
 	</tr>
 	<tr>
 		<td width="880" height="0" align="center" valign="top" colspan="4">
-		¡¡</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		¡¡</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		<p align="left">
+		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman" size="4"><b><u>Ph. D. <span lang="en-us">
 		candidates</span></u>:</b></font></td>
 	</tr>
