--- a/teammembers.htm
+++ b/teammembers.htm
@@ -32,9 +32,9 @@ p
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p align="left" style="text-align: center">
-		<img border="0" src="https://gyzhao-nm.github.io/Guoying/raw/images/Kevin.jpg"></td>
+		<img border="0" src="https://gyzhao-nm.github.io/Guoying/images/Kevin.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="https://github.com/gyzhao-nm/Guoying/raw/images/Mohammad.jpg" width="142" height="146"></td>
+		<img border="0" src="https://gyzhao-nm.github.io/Guoying/raw/images/Mohammad.jpg" width="142" height="146"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="https://github.com/gyzhao-nm/Guoying/raw/images/Hanlin.jpg"></td>
 		<td height="0" align="center" valign="top" width="223">
@@ -122,15 +122,7 @@ p
 	</tr>
 	<tr>
 		<td width="880" height="0" align="center" valign="top" colspan="4">
-		¡¡</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		¡¡</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		<p align="left">
+		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
 	<tr>
