--- a/teammembers.htm
+++ b/teammembers.htm
@@ -25,7 +25,7 @@ p
 <table border="0" width="56%">
 	<tr>
 		<td width="894" height="0" align="center" valign="top" colspan="4">
-		<p align="left">
+		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font size="4" face="Times New Roman"><b><u>Senior researchers<span lang="en-us"> 
 		and postdoctoral research fellows</span></u>:</b></font></td>
 	</tr>
@@ -130,15 +130,7 @@ p
 	</tr>
 	<tr>
 		<td width="880" height="0" align="center" valign="top" colspan="4">
-		　</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		　</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		<p align="left">
+		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
 	<tr>
@@ -161,16 +153,6 @@ p
 			Xu CHENG </b>(Nanjing University of Information Science and 
 			Technology): July 2021 - 
 			July. 2022</font></td>
-		<td height="0" align="center" valign="top" width="209">
-		　</td>
-		<td height="0" align="center" valign="top" width="223">
-		　</td>
-	</tr>
-	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		　</td>
-		<td width="226" height="0" align="center" valign="top">
-		　</td>
 		<td height="0" align="center" valign="top" width="209">
 		　</td>
 		<td height="0" align="center" valign="top" width="223">
