--- a/teammembers.htm
+++ b/teammembers.htm
@@ -55,15 +55,7 @@ p
 	</tr>
 	<tr>
 		<td width="880" height="0" align="center" valign="top" colspan="4">
-		¡¡</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		¡¡</td>
-	</tr>
-	<tr>
-		<td width="880" height="0" align="center" valign="top" colspan="4">
-		<p align="left">
+		<p align="left" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman" size="4"><b><u>Ph. D. <span lang="en-us">
 		candidates</span></u>:</b></font></td>
 	</tr>
@@ -79,12 +71,16 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Mr. Muzammil BEHZAD</b></font></td>
 		<td width="226" height="0" align="center" valign="top">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Mr. Haoyu CHEN</b></font></td>
 		<td height="0" align="center" valign="top" width="209">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Ms. Yante LI</b></font></td>
 		<td height="0" align="center" valign="top" width="223">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Mr. Abdelrahman MOSTAFA</b></font></td>
 	</tr>
 	<tr>
@@ -99,12 +95,16 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Mr. Wei PENG</b></font></td>
 		<td width="226" height="0" align="center" valign="top">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Mr. Marko SAVIC</b></font></td>
 		<td height="0" align="center" valign="top" width="209">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Mr. Atif SHAH</b></font></td>
 		<td height="0" align="center" valign="top" width="223">
+		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
 		<font size="2" face="Times New Roman"><b>Mr. Henglin SHI</b></font></td>
 	</tr>
 	<tr>
