--- a/teammembers.htm
+++ b/teammembers.htm
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Language" content="zh-cn">
+<meta http-equiv="Content-Language">
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>TEAM MEMBERS</title>
 <style>
@@ -71,17 +71,17 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Mr. Muzammil BEHZAD</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Muzammil BEHZAD</font></b></td>
 		<td width="226" height="0" align="center" valign="top">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Mr. Haoyu CHEN</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Haoyu CHEN</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Ms. Yante LI</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Ms. Yante LI</font></b></td>
 		<td height="0" align="center" valign="top" width="223">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Mr. Abdelrahman MOSTAFA</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Abdelrahman MOSTAFA</font></b></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -95,17 +95,17 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Mr. Wei PENG</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Wei PENG</font></b></td>
 		<td width="226" height="0" align="center" valign="top">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Mr. Marko SAVIC</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Mr. Atif SHAH</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Atif SHAH</font></b></td>
 		<td height="0" align="center" valign="top" width="223">
-		<p style="margin-top: 0.2cm; margin-bottom: 0.2cm">
-		<font size="2" face="Times New Roman"><b>Mr. Henglin SHI</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
+		<font face="Times New Roman">Mr. Henglin SHI</font></b></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -119,12 +119,15 @@ p
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<font size="2" face="Times New Roman"><b>Mr. Khanh TRAN-THUONG</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
+		<font face="Times New Roman">Mr. Khanh TRAN-THUONG</font></b></td>
 		<td width="226" height="0" align="center" valign="top">
-		<font size="2" face="Times New Roman"><b>Mr. Tuomas 
-			VARANKA</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
+		<font face="Times New Roman">Mr. Tuomas 
+			VARANKA</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		<font size="2" face="Times New Roman"><b>Mr. Zitong YU</b></font></td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm"><b>
+		<font face="Times New Roman">Mr. Zitong YU</font></b></td>
 		<td height="0" align="center" valign="top" width="223">
 		　</td>
 	</tr>
